# PPT-PARSER

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ppt_parser/core/: __init__.py  document_builder.py  logger.py  parser_engine.py  plugin_manager.py  validator.py
ppt_parser/exceptions/: __init__.py  base_exception.py  build_document_error.py  error_codes.py  parse_error.py  plugin_error.py  validation_error.py
ppt_parser/models/: document.py
ppt_parser/plugins/: __init__.py  base_plugin.py  json_plugin.py
ppt_parser/tests/: __init__.py  test_document_builder.py  test_end_to_end.py  test_parser_engine.py  test_validator.py
