# pyproject.toml

[tool.poetry]
name = "ppt-parser"
version = "0.1.0"
description = "PPT文档解析器"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ppt_parser"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
pylint = "^3.0.2"
mypy = "^1.7.1"
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "R0903",  # too-few-public-methods
]

[tool.pytest.ini_options]
testpaths = ["ppt_parser/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=ppt_parser"
markers = [
    "integration: mark test as integration test",
    "unit: mark test as unit test",
]

